--- a/QKDB92.ipynb
+++ b/QKDB92.ipynb
@@ -49,82 +49,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Rotas calculadas [11, 7, 6, 5, 4]\n",
       "\n",
-      "Chave gerada:           [1, 0, 0, 0, 1, 1, 1, 0, 1, 0]\n",
-      "Chave recebida:         [0, 1, None, None, 1, None, 0, None, 1, 1]\n",
-      "Qubits interferidos:    {0, 1, 2, 5, 6, 7, 9}\n",
-      "Chave final:            [1, 1]\n",
-      "Bits diferentes:        8\n",
-      "Key sucess:             0.2\n",
+      "Chave gerada:           [1, 0, 1, 0, 1, 1, 0, 1, 1, 0]\n",
+      "Chave recebida:         [1, None, None, None, None, None, None, None, None, None]\n",
+      "Qubits interferidos:    {0, 6}\n",
+      "Chave final:            [1]\n",
+      "Bits diferentes:        9\n",
+      "Key sucess:             0.1\n",
       "\n",
+      "Rotas calculadas [3, 2, 1, 0, 4, 8]\n",
       "\n",
-      "Chave gerada:           [0, 1, 1, 0, 1, 0, 0, 1, 1, 1]\n",
-      "Chave recebida:         [None, None, 0, None, None, 1, None, 1, 1, 0]\n",
-      "Qubits interferidos:    {0, 2, 3, 4, 5, 9}\n",
-      "Chave final:            [1, 1]\n",
-      "Bits diferentes:        8\n",
-      "Key sucess:             0.2\n",
+      "Chave gerada:           [1, 1, 1, 1, 0, 0, 1, 1, 0, 1]\n",
+      "Chave recebida:         [None, 1, None, 1, 0, None, 1, 1, None, None]\n",
+      "Qubits interferidos:    {8, 1}\n",
+      "Chave final:            [1, 1, 0, 1, 1]\n",
+      "Bits diferentes:        5\n",
+      "Key sucess:             0.5\n",
       "\n",
+      "Rotas calculadas [11, 7, 6, 5, 4]\n",
       "\n",
-      "Chave gerada:           [0, 0, 0, 1, 0, 0, 1, 1, 1, 1]\n",
-      "Chave recebida:         [None, 1, 0, 0, 1, None, None, 0, None, 1]\n",
-      "Qubits interferidos:    {1, 2, 3, 4, 5, 6, 7, 9}\n",
-      "Chave final:            [0, 1]\n",
-      "Bits diferentes:        8\n",
-      "Key sucess:             0.2\n",
-      "\n",
-      "\n",
-      "Chave gerada:           [1, 0, 0, 1, 1, 0, 0, 0, 1, 1]\n",
-      "Chave recebida:         [0, 1, None, None, None, 0, 0, None, None, 0]\n",
-      "Qubits interferidos:    {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
-      "Chave final:            [0, 0]\n",
-      "Bits diferentes:        8\n",
-      "Key sucess:             0.2\n",
-      "\n",
-      "\n",
-      "Chave gerada:           [1, 0, 0, 0, 0, 0, 0, 0, 1, 1]\n",
-      "Chave recebida:         [None, 1, 1, 0, None, 1, None, None, 1, 1]\n",
-      "Qubits interferidos:    {0, 1, 2, 3, 4, 5, 6, 7, 8}\n",
-      "Chave final:            [0, 1, 1]\n",
+      "Chave gerada:           [0, 0, 0, 0, 0, 0, 0, 0, 1, 0]\n",
+      "Chave recebida:         [None, 0, 0, None, None, 1, None, None, None, 0]\n",
+      "Qubits interferidos:    {5}\n",
+      "Chave final:            [0, 0, 0]\n",
       "Bits diferentes:        7\n",
       "Key sucess:             0.3\n",
       "\n",
+      "Rotas calculadas [2, 3, 7]\n",
       "\n",
-      "Chave gerada:           [1, 0, 0, 1, 0, 0, 0, 1, 0, 0]\n",
-      "Chave recebida:         [1, None, 1, None, 1, None, 1, 0, None, 0]\n",
-      "Qubits interferidos:    {1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
-      "Chave final:            [1, 0]\n",
-      "Bits diferentes:        8\n",
-      "Key sucess:             0.2\n",
+      "Chave gerada:           [0, 0, 1, 1, 1, 1, 0, 0, 1, 1]\n",
+      "Chave recebida:         [None, None, None, 1, None, None, None, None, None, None]\n",
+      "Qubits interferidos:    {3}\n",
+      "Chave final:            [1]\n",
+      "Bits diferentes:        9\n",
+      "Key sucess:             0.1\n",
       "\n",
+      "Rotas calculadas [2, 3, 7]\n",
       "\n",
-      "Chave gerada:           [0, 0, 0, 1, 0, 1, 0, 0, 0, 0]\n",
-      "Chave recebida:         [None, 1, 1, 0, None, None, None, 0, None, None]\n",
-      "Qubits interferidos:    {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "Chave gerada:           [0, 0, 0, 1, 0, 1, 0, 0, 0, 1]\n",
+      "Chave recebida:         [None, None, 0, 1, None, None, None, None, 0, None]\n",
+      "Qubits interferidos:    {9, 4}\n",
+      "Chave final:            [0, 1, 0]\n",
+      "Bits diferentes:        7\n",
+      "Key sucess:             0.3\n",
+      "\n",
+      "Rotas calculadas [5, 6, 10]\n",
+      "\n",
+      "Chave gerada:           [0, 1, 1, 1, 1, 0, 0, 0, 1, 0]\n",
+      "Chave recebida:         [None, 1, 1, None, None, 0, None, None, None, None]\n",
+      "Qubits interferidos:    set()\n",
+      "Chave final:            [1, 1, 0]\n",
+      "Bits diferentes:        7\n",
+      "Key sucess:             0.3\n",
+      "\n",
+      "Rotas calculadas [9, 5, 1, 2]\n",
+      "\n",
+      "Chave gerada:           [0, 1, 0, 0, 1, 0, 1, 0, 0, 1]\n",
+      "Chave recebida:         [1, 1, None, 0, None, None, None, 0, None, None]\n",
+      "Qubits interferidos:    {0, 3}\n",
+      "Chave final:            [1, 0, 0]\n",
+      "Bits diferentes:        7\n",
+      "Key sucess:             0.3\n",
+      "\n",
+      "Rotas calculadas [3, 2, 1, 0, 4, 8]\n",
+      "\n",
+      "Chave gerada:           [0, 1, 1, 0, 1, 0, 0, 1, 1, 1]\n",
+      "Chave recebida:         [1, None, None, 0, 1, 0, 0, None, 1, 1]\n",
+      "Qubits interferidos:    {0, 4, 5}\n",
+      "Chave final:            [0, 1, 0, 0, 1, 1]\n",
+      "Bits diferentes:        4\n",
+      "Key sucess:             0.6\n",
+      "\n",
+      "Rotas calculadas [10, 6, 2, 3]\n",
+      "\n",
+      "Chave gerada:           [1, 0, 1, 0, 0, 0, 1, 1, 1, 0]\n",
+      "Chave recebida:         [None, None, None, 0, None, None, None, 0, None, None]\n",
+      "Qubits interferidos:    {7}\n",
       "Chave final:            [0]\n",
       "Bits diferentes:        9\n",
       "Key sucess:             0.1\n",
       "\n",
+      "Rotas calculadas [5, 6, 10]\n",
       "\n",
-      "Chave gerada:           [0, 1, 0, 1, 0, 0, 1, 0, 1, 0]\n",
-      "Chave recebida:         [None, None, 1, None, 0, None, None, None, None, None]\n",
-      "Qubits interferidos:    {0, 2, 4, 5, 7, 8}\n",
-      "Chave final:            [0]\n",
-      "Bits diferentes:        9\n",
-      "Key sucess:             0.1\n",
-      "\n",
-      "\n",
-      "Chave gerada:           [0, 1, 1, 1, 1, 1, 0, 1, 0, 1]\n",
-      "Chave recebida:         [None, None, None, 0, None, None, 1, 0, 0, 1]\n",
-      "Qubits interferidos:    {0, 1, 3, 4, 6, 7, 8, 9}\n",
-      "Chave final:            [0, 1]\n",
-      "Bits diferentes:        8\n",
-      "Key sucess:             0.2\n",
-      "\n",
-      "\n",
-      "Chave gerada:           [0, 1, 1, 1, 0, 1, 1, 1, 1, 0]\n",
-      "Chave recebida:         [1, None, None, 0, None, None, 1, 1, None, 1]\n",
-      "Qubits interferidos:    {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+      "Chave gerada:           [0, 0, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "Chave recebida:         [None, None, None, 0, 1, None, None, None, 1, None]\n",
+      "Qubits interferidos:    {3}\n",
       "Chave final:            [1, 1]\n",
       "Bits diferentes:        8\n",
       "Key sucess:             0.2\n",
