--- a/QKDE91.ipynb
+++ b/QKDE91.ipynb
@@ -49,103 +49,113 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Rotas calculadas [3, 2, 6]\n",
       "\n",
-      "Base de Alice:          [0, 1, 0, 0, 1, 0, 0, 1, 1, 1]\n",
-      "Base de Bob:            [0, 0, 0, 1, 1, 0, 0, 1, 0, 1]\n",
-      "Chave gerada:           [1, 0, 0, 0, 0, 1, 0, 0, 1, 0]\n",
-      "Chave recebida:         [1, None, 0, None, 0, 1, 0, 0, None, 0]\n",
-      "Qubits interferidos:    {3}\n",
-      "Chave final:            [1, 0, 0, 1, 0, 0, 0]\n",
-      "Bits diferentes:        3\n",
-      "Key sucess:             0.7\n",
-      "\n",
-      "\n",
-      "Base de Alice:          [1, 0, 0, 0, 1, 0, 1, 1, 1, 1]\n",
-      "Base de Bob:            [1, 0, 1, 0, 1, 1, 0, 1, 0, 1]\n",
-      "Chave gerada:           [1, 0, 0, 0, 0, 0, 1, 0, 1, 1]\n",
-      "Chave recebida:         [1, 0, None, 0, 0, None, None, 0, None, 0]\n",
-      "Qubits interferidos:    {9, 5}\n",
-      "Chave final:            [1, 0, 0, 0, 0]\n",
-      "Bits diferentes:        5\n",
-      "Key sucess:             0.5\n",
-      "\n",
-      "\n",
-      "Base de Alice:          [1, 0, 1, 0, 0, 1, 0, 0, 0, 1]\n",
-      "Base de Bob:            [0, 1, 1, 1, 0, 1, 1, 1, 1, 0]\n",
-      "Chave gerada:           [1, 0, 1, 1, 0, 1, 0, 1, 0, 0]\n",
-      "Chave recebida:         [None, None, 0, None, 0, 1, None, None, None, None]\n",
-      "Qubits interferidos:    {8, 9, 2}\n",
-      "Chave final:            [0, 1]\n",
-      "Bits diferentes:        8\n",
-      "Key sucess:             0.2\n",
-      "\n",
-      "\n",
-      "Base de Alice:          [1, 1, 0, 0, 0, 0, 1, 1, 0, 0]\n",
-      "Base de Bob:            [0, 1, 0, 0, 0, 0, 1, 1, 1, 1]\n",
-      "Chave gerada:           [1, 0, 0, 0, 0, 1, 0, 0, 1, 0]\n",
-      "Chave recebida:         [None, 0, 0, 0, 1, 1, 0, 0, None, None]\n",
-      "Qubits interferidos:    {0, 4}\n",
-      "Chave final:            [0, 0, 0, 1, 0, 0]\n",
-      "Bits diferentes:        4\n",
-      "Key sucess:             0.6\n",
-      "\n",
-      "\n",
-      "Base de Alice:          [1, 0, 1, 1, 0, 1, 0, 1, 0, 1]\n",
-      "Base de Bob:            [1, 0, 0, 0, 0, 1, 0, 0, 1, 0]\n",
-      "Chave gerada:           [1, 0, 1, 1, 0, 1, 1, 1, 0, 1]\n",
-      "Chave recebida:         [1, 1, None, None, 0, 1, 1, None, None, None]\n",
-      "Qubits interferidos:    {1, 9}\n",
-      "Chave final:            [1, 0, 1, 1]\n",
+      "Base de Alice:          [0, 1, 1, 0, 0, 0, 0, 0, 1, 1]\n",
+      "Base de Bob:            [1, 0, 1, 1, 1, 0, 0, 1, 1, 1]\n",
+      "Chave gerada:           [1, 0, 1, 1, 1, 0, 1, 0, 0, 1]\n",
+      "Chave recebida:         [None, None, 1, None, None, 0, 1, None, 0, 0]\n",
+      "Qubits interferidos:    {9}\n",
+      "Chave final:            [1, 0, 1, 0]\n",
       "Bits diferentes:        6\n",
       "Key sucess:             0.4\n",
       "\n",
+      "Rotas calculadas [4, 5, 6, 7]\n",
       "\n",
-      "Base de Alice:          [1, 1, 1, 0, 0, 1, 1, 1, 1, 1]\n",
-      "Base de Bob:            [1, 0, 0, 0, 1, 1, 0, 0, 0, 1]\n",
-      "Chave gerada:           [0, 1, 1, 1, 0, 1, 1, 0, 0, 0]\n",
-      "Chave recebida:         [0, None, None, 1, None, 1, None, None, None, 1]\n",
-      "Qubits interferidos:    {9}\n",
-      "Chave final:            [0, 1, 1]\n",
-      "Bits diferentes:        7\n",
-      "Key sucess:             0.3\n",
-      "\n",
-      "\n",
-      "Base de Alice:          [0, 0, 1, 0, 0, 1, 0, 0, 1, 0]\n",
-      "Base de Bob:            [0, 0, 1, 0, 0, 1, 1, 1, 1, 1]\n",
-      "Chave gerada:           [0, 1, 0, 0, 0, 0, 1, 0, 1, 1]\n",
-      "Chave recebida:         [0, 1, 0, 0, 0, 0, None, None, 1, None]\n",
-      "Qubits interferidos:    set()\n",
-      "Chave final:            [0, 1, 0, 0, 0, 0, 1]\n",
-      "Bits diferentes:        3\n",
-      "Key sucess:             0.7\n",
-      "\n",
-      "\n",
-      "Base de Alice:          [0, 1, 1, 1, 1, 1, 0, 1, 1, 0]\n",
-      "Base de Bob:            [1, 1, 0, 0, 0, 1, 1, 0, 1, 1]\n",
-      "Chave gerada:           [1, 0, 0, 0, 1, 1, 1, 1, 0, 1]\n",
-      "Chave recebida:         [None, 0, None, None, None, 1, None, None, 0, None]\n",
-      "Qubits interferidos:    {2}\n",
+      "Base de Alice:          [0, 1, 0, 1, 0, 1, 0, 0, 0, 1]\n",
+      "Base de Bob:            [1, 1, 1, 0, 0, 1, 0, 1, 1, 0]\n",
+      "Chave gerada:           [0, 0, 0, 1, 0, 1, 0, 0, 1, 1]\n",
+      "Chave recebida:         [None, 1, None, None, 0, 1, 0, None, None, None]\n",
+      "Qubits interferidos:    {1, 3, 9}\n",
       "Chave final:            [0, 1, 0]\n",
       "Bits diferentes:        7\n",
       "Key sucess:             0.3\n",
       "\n",
+      "Rotas calculadas [5, 4, 8]\n",
       "\n",
-      "Base de Alice:          [0, 1, 0, 1, 1, 0, 1, 0, 0, 1]\n",
-      "Base de Bob:            [0, 0, 0, 0, 0, 0, 0, 0, 0, 1]\n",
-      "Chave gerada:           [0, 0, 1, 1, 0, 1, 1, 0, 0, 1]\n",
-      "Chave recebida:         [0, None, 1, None, None, 1, None, 0, 0, 1]\n",
+      "Base de Alice:          [1, 0, 1, 1, 1, 1, 0, 1, 0, 0]\n",
+      "Base de Bob:            [0, 1, 0, 1, 0, 1, 0, 1, 1, 1]\n",
+      "Chave gerada:           [1, 1, 0, 1, 0, 1, 1, 1, 1, 1]\n",
+      "Chave recebida:         [None, None, None, 1, None, 1, 0, 0, None, None]\n",
+      "Qubits interferidos:    {1, 6, 7}\n",
+      "Chave final:            [1, 1]\n",
+      "Bits diferentes:        8\n",
+      "Key sucess:             0.2\n",
+      "\n",
+      "Rotas calculadas [9, 8, 4, 0]\n",
+      "\n",
+      "Base de Alice:          [1, 0, 1, 0, 0, 1, 1, 1, 1, 1]\n",
+      "Base de Bob:            [1, 1, 1, 1, 1, 1, 0, 1, 1, 1]\n",
+      "Chave gerada:           [0, 0, 1, 1, 1, 0, 0, 0, 1, 0]\n",
+      "Chave recebida:         [0, None, 1, None, None, 0, None, 0, 1, 0]\n",
       "Qubits interferidos:    set()\n",
-      "Chave final:            [0, 1, 1, 0, 0, 1]\n",
+      "Chave final:            [0, 1, 0, 0, 1, 0]\n",
       "Bits diferentes:        4\n",
       "Key sucess:             0.6\n",
       "\n",
+      "Rotas calculadas [8, 9, 10, 11]\n",
       "\n",
-      "Base de Alice:          [0, 0, 0, 1, 0, 0, 1, 0, 0, 0]\n",
-      "Base de Bob:            [0, 0, 0, 1, 1, 0, 0, 1, 0, 1]\n",
-      "Chave gerada:           [1, 0, 0, 0, 0, 1, 0, 0, 0, 0]\n",
-      "Chave recebida:         [1, 1, 0, 0, None, 1, None, None, 0, None]\n",
-      "Qubits interferidos:    {1}\n",
-      "Chave final:            [1, 0, 0, 1, 0]\n",
+      "Base de Alice:          [1, 1, 1, 1, 1, 0, 0, 1, 0, 0]\n",
+      "Base de Bob:            [0, 0, 1, 1, 1, 0, 0, 0, 1, 0]\n",
+      "Chave gerada:           [0, 0, 1, 1, 0, 1, 1, 1, 0, 1]\n",
+      "Chave recebida:         [None, None, 0, 1, 0, 1, 1, None, None, 1]\n",
+      "Qubits interferidos:    {2}\n",
+      "Chave final:            [1, 0, 1, 1, 1]\n",
+      "Bits diferentes:        5\n",
+      "Key sucess:             0.5\n",
+      "\n",
+      "Rotas calculadas [5, 4, 8]\n",
+      "\n",
+      "Base de Alice:          [0, 1, 0, 1, 1, 1, 1, 0, 0, 1]\n",
+      "Base de Bob:            [0, 0, 0, 0, 0, 1, 0, 1, 1, 0]\n",
+      "Chave gerada:           [0, 1, 1, 0, 0, 0, 1, 0, 0, 1]\n",
+      "Chave recebida:         [0, None, 1, None, None, 0, None, None, None, None]\n",
+      "Qubits interferidos:    set()\n",
+      "Chave final:            [0, 1, 0]\n",
+      "Bits diferentes:        7\n",
+      "Key sucess:             0.3\n",
+      "\n",
+      "Rotas calculadas [8, 9, 10, 11]\n",
+      "\n",
+      "Base de Alice:          [1, 1, 1, 0, 1, 1, 1, 1, 1, 0]\n",
+      "Base de Bob:            [0, 1, 1, 1, 0, 1, 0, 0, 0, 0]\n",
+      "Chave gerada:           [1, 0, 0, 0, 0, 0, 1, 0, 0, 0]\n",
+      "Chave recebida:         [None, 0, 0, None, None, 0, None, None, None, 0]\n",
+      "Qubits interferidos:    {8}\n",
+      "Chave final:            [0, 0, 0, 0]\n",
+      "Bits diferentes:        6\n",
+      "Key sucess:             0.4\n",
+      "\n",
+      "Rotas calculadas [7, 6, 10]\n",
+      "\n",
+      "Base de Alice:          [1, 1, 0, 0, 1, 1, 1, 1, 1, 0]\n",
+      "Base de Bob:            [0, 1, 0, 0, 0, 1, 1, 1, 1, 1]\n",
+      "Chave gerada:           [1, 1, 1, 1, 1, 1, 0, 0, 0, 0]\n",
+      "Chave recebida:         [None, 1, 1, 1, None, 1, 0, 0, 0, None]\n",
+      "Qubits interferidos:    {4}\n",
+      "Chave final:            [1, 1, 1, 1, 0, 0, 0]\n",
+      "Bits diferentes:        3\n",
+      "Key sucess:             0.7\n",
+      "\n",
+      "Rotas calculadas [1, 0, 4]\n",
+      "\n",
+      "Base de Alice:          [1, 1, 0, 0, 0, 0, 0, 1, 1, 1]\n",
+      "Base de Bob:            [0, 0, 0, 0, 0, 0, 1, 1, 1, 0]\n",
+      "Chave gerada:           [1, 1, 0, 1, 1, 1, 1, 1, 1, 1]\n",
+      "Chave recebida:         [None, None, 0, 1, 1, 1, None, 0, 1, None]\n",
+      "Qubits interferidos:    {7}\n",
+      "Chave final:            [0, 1, 1, 1, 1]\n",
+      "Bits diferentes:        5\n",
+      "Key sucess:             0.5\n",
+      "\n",
+      "Rotas calculadas [6, 5, 9]\n",
+      "\n",
+      "Base de Alice:          [1, 1, 0, 1, 1, 1, 1, 0, 1, 0]\n",
+      "Base de Bob:            [1, 0, 0, 1, 0, 1, 0, 0, 0, 0]\n",
+      "Chave gerada:           [0, 1, 0, 0, 1, 1, 0, 0, 0, 1]\n",
+      "Chave recebida:         [1, None, 0, 0, None, 1, None, 0, None, 1]\n",
+      "Qubits interferidos:    {0, 6}\n",
+      "Chave final:            [0, 0, 1, 0, 1]\n",
       "Bits diferentes:        5\n",
       "Key sucess:             0.5\n",
       "\n"
