--- a/Simulação Topologia Treliça.ipynb
+++ b/Simulação Topologia Treliça.ipynb
@@ -123,7 +123,7 @@
     "    rede.set_lattice_topology(3, 4)\n",
     "        \n",
     "    requests = generate_qkd_request(rede, n_requests)\n",
-    "    resultados_simulacao = controlador.send_requests(requests, 'shortest')\n",
+    "    resultados_simulacao = controlador.send_requests(requests, 'all')\n",
     "    \n",
     "    for indice_execucao in resultados_simulacao:\n",
     "        # Percorre cada execução e colhe o sucesso nas chaves\n",
@@ -164,7 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.783333333333334\n"
+      "4.949999999999999\n"
      ]
     }
    ],
@@ -181,7 +181,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2343333333333333\n"
+      "0.277\n"
      ]
     }
    ],
@@ -198,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.08959228637431785\n"
+      "0.0892493386218881\n"
      ]
     }
    ],
@@ -223,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
