Add topologia EUA e Cálculo da rota pelo tamanho da rota

--- a/Simulação Topologia Malha.ipynb
+++ b/Simulação Topologia Malha.ipynb
@@ -157,6 +157,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Resultados"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
