--- a/Simulação Topologia Treliça.ipynb
+++ b/Simulação Topologia Treliça.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,20 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Criando a rede\n",
     "rede = Network()\n",
     "# Criando e definindo um controlador pra rede\n",
-    "controlador = Controller()\n",
-    "controlador.set_network(rede)"
+    "controlador = Controller(rede)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_qkd_request(rede, num_requests, diff_nodes=5):\n",
+    "def generate_qkd_request(rede, num_requests , avaliable_apps=[\"BB84\", \"E91\", \"B92\"], diff_nodes=5):\n",
     "        \"\"\"\n",
     "        Gera uma lista de requisições aleatórias de QKD.\n",
     "\n",
@@ -69,7 +68,6 @@
     "            requests (list): Lista com requisições.\n",
     "        \"\"\"\n",
     "        requests = []\n",
-    "        avaliable_apps = [\"B92\"]\n",
     "        \n",
     "        for i in range(num_requests):\n",
     "            alice, bob = rede.random_alice_bob(diff_nodes)\n",
@@ -89,28 +87,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Taxa de sucesso de bits das chaves\n",
-    "taxas_sucesso_chaves_geral = []\n",
-    "taxas_sucesso_chaves_e91 = []\n",
-    "taxas_sucesso_chaves_bb84 = []\n",
-    "taxas_sucesso_chaves_b92 = []\n",
-    "\n",
-    "# Médias de sucesso de bits das chaves\n",
-    "medias_sucesso_chaves_geral = dict()\n",
-    "\n",
+    "taxas_sucesso_chaves_geral = [] \n",
+    "taxas_sucesso_chaves_e91 = [] \n",
+    "taxas_sucesso_chaves_bb84 = [] \n",
+    "taxas_sucesso_chaves_b92 = [] \n",
     "\n",
     "# Vazão da rede\n",
-    "vazao = []\n",
-    "media_vazao = []"
+    "apps = [\"BB84\", \"E91\", \"B92\"]\n",
+    "vazao = [] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,9 +115,9 @@
     "    taxas_sucesso_chaves_bb84 = []\n",
     "    taxas_sucesso_chaves_b92 = []\n",
     "    rede.set_lattice_topology(3, 4)\n",
-    "        \n",
-    "    requests = generate_qkd_request(rede, n_requests)\n",
-    "    resultados_simulacao = controlador.send_requests(requests, 'all')\n",
+    "\n",
+    "    requests = generate_qkd_request(rede, n_requests, apps)\n",
+    "    resultados_simulacao = controlador.send_requests(requests, 'shortest')\n",
     "    \n",
     "    for indice_execucao in resultados_simulacao:\n",
     "        # Percorre cada execução e colhe o sucesso nas chaves\n",
@@ -157,53 +151,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.949999999999999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(np.mean(vazao))"
+    "def formatar_numero(numero):\n",
+    "    # Transforma o número em uma string com 7 casas decimais\n",
+    "    numero_formatado = \"{:.7f}\".format(numero)\n",
+    "\n",
+    "    # Substitui o ponto pela vírgula\n",
+    "    numero_formatado = numero_formatado.replace('.', ',')\n",
+    "\n",
+    "    return numero_formatado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.277\n"
+      "5,6083333\n"
      ]
     }
    ],
    "source": [
-    "print(np.mean(taxas_sucesso_chaves_geral))"
+    "print(formatar_numero(np.mean(vazao)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0892493386218881\n"
+      "2,1533404\n"
      ]
     }
    ],
    "source": [
-    "print(np.std(taxas_sucesso_chaves_geral))"
+    "print(formatar_numero(np.std(vazao)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,3835833\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(formatar_numero(np.mean(taxas_sucesso_chaves_geral)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0,1270742\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(formatar_numero(np.std(taxas_sucesso_chaves_geral)))"
    ]
   }
  ],
