Corrigindo bug no RunSimulations Add Topologia China

--- a/Topologia USA.ipynb
+++ b/Topologia USA.ipynb
@@ -42,7 +42,7 @@
     "n_simulacoes = 100\n",
     "n_requests = 50\n",
     "apps = [\"BB84\", \"E91\", \"B92\"]\n",
-    "routes_calculation_type = 'shortest'"
+    "routes_calculation_type = 'kshortest'"
    ]
   },
   {
@@ -68,7 +68,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6,9726787 1,5049673 0,3593425 0,0758569\n"
+      "8,3458333 1,3465095 0,4167226 0,0762472\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=SPLIT(\"6,9726787 1,5049673 0,3593425 0,0758569\"; \" \")\n"
+      "=SPLIT(\"8,3458333 1,3465095 0,4167226 0,0762472\"; \" \")\n"
      ]
     }
    ],
@@ -104,7 +104,7 @@
    "outputs": [],
    "source": [
     "def formatar_planilha():\n",
-    "    apps = [\"E91\"]\n",
+    "    apps = [\"B92\"]\n",
     "    routes_calculation_type = 'shortest'\n",
     "    numero_requests = [2, 5, 10, 25, 50, 75, 100]\n",
     "    \n",
@@ -127,19 +127,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=SPLIT(\"2,0000000 0,0000000 0,1433333 0,0560753\"; \" \")\n",
-      "=SPLIT(\"5,0000000 0,0000000 0,1436667 0,0574833\"; \" \")\n",
-      "=SPLIT(\"7,6500000 2,4954959 0,1408333 0,0456664\"; \" \")\n",
-      "=SPLIT(\"8,7083333 1,4842928 0,1410000 0,0294971\"; \" \")\n",
-      "=SPLIT(\"10,0083333 1,0638961 0,1447444 0,0254244\"; \" \")\n",
-      "=SPLIT(\"10,4315476 1,0332354 0,1457149 0,0178732\"; \" \")\n",
-      "=SPLIT(\"10,6974747 0,8742319 0,1470574 0,0162956\"; \" \")\n"
+      "=SPLIT(\"1,9300000 0,2551470 0,2430000 0,1450896\"; \" \")\n",
+      "=SPLIT(\"3,6833333 1,2702799 0,2623333 0,1107204\"; \" \")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=SPLIT(\"4,1666667 1,2692955 0,2525000 0,0900193\"; \" \")\n",
+      "=SPLIT(\"5,5714286 1,1372242 0,2441476 0,0620669\"; \" \")\n",
+      "=SPLIT(\"6,3468957 1,1240967 0,2592227 0,0463211\"; \" \")\n",
+      "=SPLIT(\"7,1822306 1,2927390 0,2527550 0,0427138\"; \" \")\n",
+      "=SPLIT(\"7,3207216 0,9296856 0,2497024 0,0319012\"; \" \")\n"
      ]
     }
    ],
    "source": [
     "formatar_planilha()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -158,7 +171,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
