--- a/Simulação Topologia Treliça.ipynb
+++ b/Simulação Topologia Treliça.ipynb
@@ -38,8 +38,8 @@
    "outputs": [],
    "source": [
     "# Propriedades para simulação\n",
-    "n_simulacoes = 1000\n",
-    "n_requests = 100\n",
+    "n_simulacoes = 1\n",
+    "n_requests = 10\n",
     "n_total_execucoes = 0"
    ]
   },
@@ -106,7 +106,16 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1ª execução.\n",
+      "2ª execução.\n"
+     ]
+    }
+   ],
    "source": [
     "# Executa num_simulacoes vezes simulações de requests\n",
     "for indice, simulacao in enumerate(range(n_simulacoes)):\n",
@@ -117,7 +126,7 @@
     "    rede.set_lattice_topology(3, 4)\n",
     "\n",
     "    requests = generate_qkd_request(rede, n_requests, apps)\n",
-    "    resultados_simulacao = controlador.send_requests(requests, 'shortest')\n",
+    "    resultados_simulacao = controlador.send_requests(requests, 'kshortest')\n",
     "    \n",
     "    for indice_execucao in resultados_simulacao:\n",
     "        # Percorre cada execução e colhe o sucesso nas chaves\n",
@@ -174,7 +183,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10,3391220\n"
+      "5,0000000\n"
      ]
     }
    ],
@@ -191,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0,9390633\n"
+      "0,0000000\n"
      ]
     }
    ],
@@ -208,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0,3585465\n"
+      "0,2500000\n"
      ]
     }
    ],
@@ -225,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0,0535039\n"
+      "0,0000000\n"
      ]
     }
    ],
@@ -250,7 +259,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
