Remove old request
Removida antiga forma de enviar e atender os requests do controlador. Adicionados à geladeira.

--- a/geladeira/Old Requests.ipynb
+++ b/geladeira/Old Requests.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "#### Antiga forma de criar requests\n",
     "\n",
-    "Os requests são tuplas de ```(app, alice, bob, prioridade)```. Trocado por um objeto Request porque facilitava a atualização das chaves obtidas. Caminho antigo: ```components/qkd/app.py```"
+    "Os requests são tuplas de ```(app, alice, bob, prioridade)```. Trocado por um objeto Request porque facilitava a atualização das chaves obtidas. Caminho antigo: ```components/qkd/app.py``` e ```components/controller.py```."
    ]
   },
   {
@@ -89,6 +89,134 @@
     "        vazao.append(n_requests / n_execucoes)\n",
     "\n",
     "    return taxas_sucesso_chaves_geral, vazao"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    \n",
+    "def allocate_routes(self, request_list, routes_calculation_type='shortest'):\n",
+    "    \"\"\"\n",
+    "    Aloca as rotas para os pedidos e atualiza a lista de requisições.\n",
+    "    \n",
+    "    Args:\n",
+    "        request_list (list): Lista de requisições -> [alice, bob, app].\n",
+    "    \n",
+    "    Returns:\n",
+    "        info (list): Lista de dicionários -> [{'Priority': priority, 'Route': route, 'App': app}].\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Informações das requisições\n",
+    "    info = []\n",
+    "    # Todos os links já utilizados\n",
+    "    all_used_links = set()\n",
+    "    # Links utilizados apenas por BB84 e B92\n",
+    "    bb84_b92_used_links = set()\n",
+    "    # Contador de rotas E91 (para que não haja muitos E91 com links compartilhados)\n",
+    "    e91_count = 0\n",
+    "    # Ordenando as requisições por prioridade\n",
+    "    sorted_request_list = sorted(request_list, key=lambda x: x[3], reverse=True)\n",
+    "                    \n",
+    "    for alice, bob, app, priority in sorted_request_list:\n",
+    "        \n",
+    "        # Calcula as rotas de menor custo\n",
+    "        if routes_calculation_type == 'shortest':\n",
+    "            routes = self.calculate_shortest_routes(alice, bob)\n",
+    "        elif routes_calculation_type == 'kshortest': \n",
+    "            routes = self.calculate_k_shortest_routes(alice, bob)\n",
+    "        elif routes_calculation_type == 'all':\n",
+    "            routes = self.calculate_all_routes(alice, bob)\n",
+    "        elif routes_calculation_type == 'klength':\n",
+    "            routes = self.calculate_routes_of_k_length(alice, bob, 5)\n",
+    "        \n",
+    "        #print(f'Rotas: {routes}')\n",
+    "        # Itera sobre as rotas\n",
+    "        for route in routes:\n",
+    "            #print(f'Rota Avaliada: {route}')\n",
+    "            # Lista de pares de elementos adjacentes da lista route (canais)\n",
+    "            route_links = [(route[i], route[i + 1]) for i in range(len(route) - 1)]\n",
+    "\n",
+    "            # Checa se nenhum link dessa rota já foi usado em uma rota anterior\n",
+    "            if not any(link in all_used_links for link in route_links):\n",
+    "                    # Se a app for BB84 ou B92, adiciona os links usados no conjunto de links usados apenas por essas apps\n",
+    "                    if app == 'BB84' or app == 'B92':\n",
+    "                        bb84_b92_used_links.update(route_links)\n",
+    "                    \n",
+    "                    # Adicionando as informações de rota, app e prioridade\n",
+    "                    info.append({'Priority': priority, 'Route': route, 'App': app})\n",
+    "                    \n",
+    "                    # Adiciona os links usados no conjunto de links usados\n",
+    "                    all_used_links.update(route_links)\n",
+    "                    \n",
+    "                    # Remove a requisição da lista de requisições\n",
+    "                    request_list.remove((alice, bob, app, priority))\n",
+    "                    \n",
+    "                    break\n",
+    "                \n",
+    "            elif app == 'E91':\n",
+    "                # Se nenhum dos links desta rota está nos links utilizados pelos outros tipos de protocolo, os links que estão sendo utilizados são dos outros E91\n",
+    "                if not any(e91_link in bb84_b92_used_links for e91_link in route_links):\n",
+    "                    # Para que não haja tantos E91 com links compartilhados, só 3 rotas E91 que compartilham links serão alocadas no máximo\n",
+    "                    if e91_count < 3:\n",
+    "                        # Adicionando as informações de rota, app e prioridade\n",
+    "                        info.append({'Priority': priority, 'Route': route, 'App': app})\n",
+    "                        \n",
+    "                        # Adicionando o link ao conjunto de links usados\n",
+    "                        all_used_links.update(route_links)\n",
+    "                        \n",
+    "                        # Removendo a requisição da lista de requisições\n",
+    "                        request_list.remove((alice, bob, app, priority))\n",
+    "                        e91_count += 1\n",
+    "                    \n",
+    "                    break\n",
+    "    \n",
+    "    return info\n",
+    "\n",
+    "def send_requests(self, request_list, routes_calculation_type='shortest'):\n",
+    "    \"\"\"\n",
+    "    Envia as requisições para a rede que as executa a partir da lista.\n",
+    "    \n",
+    "    Args:\n",
+    "        request_list (list): Lista de requisições -> [alice, bob, app].\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Índice da execução\n",
+    "    exec_index = 1\n",
+    "    results = dict()\n",
+    "    \n",
+    "    # Enquanto houver requisições na lista de requisições\n",
+    "    while len(request_list) > 0:\n",
+    "        # print(\"Requisições: \", request_list, \"\\n\")\n",
+    "        # Alocando as rotas para os pedidos possíveis de serem atendidos, ou seja, que não compartilham links\n",
+    "        requests_info = self.allocate_routes(request_list, routes_calculation_type)\n",
+    "                    \n",
+    "        #LOG\n",
+    "        print(f'{exec_index}ª execução.')\n",
+    "        #print(f'Rotas alocadas: {allocated_routes}')\n",
+    "        #print(f'Apps: {list_app}')\n",
+    "        \n",
+    "        for request in requests_info:\n",
+    "            # Informações da requisição\n",
+    "            alice, bob = request[\"Route\"][0], request[\"Route\"][-1]\n",
+    "            app = request[\"App\"]\n",
+    "            route = request[\"Route\"]\n",
+    "            \n",
+    "            # Executa a aplicação QKD\n",
+    "            if app == 'B92':\n",
+    "                exec_data = run_qkd_b92(self.network, route)\n",
+    "            elif app == 'BB84':\n",
+    "                exec_data = run_qkd_bb84(self.network, route)\n",
+    "            elif app == 'E91':\n",
+    "                exec_data = run_qkd_e91(self.network, route)\n",
+    "        \n",
+    "        # Coletando dados\n",
+    "        results[exec_index] = exec_data\n",
+    "        exec_index += 1\n",
+    "    \n",
+    "    return results\n"
    ]
   }
  ],
